--- a/config.toml
+++ b/config.toml
@@ -5,31 +5,29 @@ title = "خانه"
 theme = "bookworm-FE"
 paginate = "7"
 
+uglyurls = true
+
 # - Post Url - 
 [permalinks]
   # This section is only for working aliases properly
-
-uglyurls = true
 
 # ----- Plugins -----
 
 # -- CSS Plugins --
 [[params.plugins.css]]
-link = "https://cdn.rtlcss.com/bootstrap/v4.5.3/css/bootstrap.min.css"
+link = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
 link = "plugins/line-awesome/css/line-awesome.min.css"
 [[params.plugins.css]] # Font Vazir
 link ="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v29.1.0/dist/font-face.css"
 [[params.plugins.css]] # Custom Css
 link="plugins/customCss/main.css"
-[[params.plugins.css]] # Vanilla Gallery
-link="https://ghcdn.rawgit.org/Gnkalk/Vanilla-Gallery/main/Css-script/RO/Gallery-OCO.css"
 
 # -- JS Plugins --
 [[params.plugins.js]]
 link = "plugins/bootstrap/bootstrap.min.js"
 [[params.plugins.js]]
-link = "https://lib.arvancloud.com/jquery/3.6.0/jquery.js"
+link = "plugins/jquery/jquery.min.js"
 
 # site variables
 [params.variables]
